# OLD-Hatchetflash-VS

./: .gitignore  BlockShape-IDs.txt  CMakeLists.txt  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Collisions.cpp  Commenting_Style.txt  Controls.txt  EBO.cpp  EBO.h  HardcodedUnknownImage.h  Hatchetflash.sln  Hatchetflash.vcxproj  Hatchetflash.vcxproj.filters  Linux_Compatability.txt  Main.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  README.md  See-also.txt  Shape IDs.txt  Texture.cpp  Texture.h  Things_I'd_Probably_Forget.txt  Things_To_Remember.txt  VAO.cpp  VAO.h  VBO.cpp  VBO.h  default.frag  default.vert  glad.c  shaderClass.cpp  shaderClass.h  stb.cpp
Headers/: Audio.h  AudioBuffer.h  AudioSource.h  AudioSystem.h  BlockTextureAtlas.h  Camera.h  Chunk.h  Chunks.h  Collisions.h  GeneralTextures.h  HardcodedUnknownImage.h  Logger.h  Logger.hpp  Mesh.h  Meshes.h  Model.h  Models.h  Physics.h  ShaderClass.h  Text.h  TextRendering.h  TextureAtlas.h
Libraries/lib/: glfw3.lib
Text Documents/: Commenting-style.txt  Commenting_format.txt  Dont-forget.txt  Game Controls.txt  Game-Controls.txt  STID-numbering.txt  STID-numbers.txt  Sting ID.txt  Sting-ID.txt  Substance IDs.txt  Thingo-IDs.txt
licenses/: space-grotesk_license.txt
src/: Audio.cpp  AudioBuffer.cpp  AudioSource.cpp  AudioSystem.cpp  BlockTextureAtlas.cpp  Camera.cpp  Chunk.cpp  Chunks.cpp  Collisions.cpp  GeneralTextures.cpp  Logger.cpp  Main.cpp  Mesh.cpp  Meshes.cpp  Model.cpp  Models.cpp  Physics.cpp  ShaderClass.cpp  Text.cpp  TextRendering.cpp  TextureAtlas.cpp  glad.c  shaderClass.cpp  stb.cpp
(+8 files in other folders)
